fix slide-tracker spacing

--- a/src/components/SlideTracker/SlideTracker.less
+++ b/src/components/SlideTracker/SlideTracker.less
@@ -3,6 +3,7 @@ section.tracker-container {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-self: stretch;
 
   @media @tablet-large {
     padding: 0 0;
@@ -26,6 +27,7 @@ section.tracker-container {
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
+    flex: 1;
 
     @media @tablet-large {
       flex-direction: row;
@@ -39,6 +41,7 @@ section.tracker-container {
       flex-direction: column;
       justify-content: space-between;
       align-items: center;
+      flex: 1;
 
       @media @tablet-large {
         flex-direction: row;
@@ -58,7 +61,6 @@ section.tracker-container {
         border: solid 8px @dark;
         list-style: none;
         position: relative;
-        margin: 0.3rem 0;
 
         display: flex;
         flex-direction: column;
@@ -132,10 +134,11 @@ section.tracker-container {
       font-size: 3rem;
       transform: scaleY(1.3);
       cursor: pointer;
-      margin: 1rem 0;
+      margin: 3rem 0;
 
       @media @tablet-large {
         transform: rotate(-90deg);
+        margin: 0 0.5rem;
       }
 
       @media @phone-large {
